# c-dns

./: .gitignore  Cargo.toml
c-dns/: Cargo.toml  c-dns.cddl
c-dns/src/: iterators.rs  lib.rs  serialization.rs  utils.rs
c-dns/tests/: reserialization.rs
c-dns/tests/data/: dns.cdns  dns.pcap
serde-indexed/: Cargo.toml
serde-indexed/src/: lib.rs  parse.rs
serde-indexed/tests/: basics.rs
src/: lib.rs  parse.rs
